syntax = "proto3";
package microtick.v1beta1.msg;

import "gogoproto/gogo.proto";

option go_package = "github.com/microtick/mtzone/x/microtick/msg";
option (gogoproto.goproto_stringer_all) = false;

message DenomChangeProposal {
  option (gogoproto.equal) = true;
  
  string title = 1;
  string description = 2;
  string backing_denom = 3;
  string backing_ratio = 4;
}

message MarketMetadata {
  option (gogoproto.equal) = true;
  
  string name = 1;
  string description = 2;
}

message AddMarketsProposal {
  option (gogoproto.equal) = true;
  
  string title = 1;
  string description = 2;
  repeated MarketMetadata markets = 3;
}
